# zeroentropy-rust

./: .env.example  .gitignore  Cargo.toml  GUIDE.md  LICENSE  README.md
examples/: arxiv_search.rs  basic.rs  ehr_search.rs
src/: client.rs  error.rs  lib.rs  types.rs
src/resources/: collections.rs  documents.rs  mod.rs  models.rs  queries.rs
tests/: integration_tests.rs
